force-app/main/default/objects/Opportunity_Hierarchy__c/Opportunity_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Opportunity Hierarchy</label>
    <nameField>
        <label>Opportunity Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Hierarchy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>