force-app/main/default/objects/Opportunity_Hierarchy__c/fields/Child_Opps_Prod_Only_SubTotal__c.field-meta.xml
<CustomField>
    <fullName>Child_Opps_Prod_Only_SubTotal__c</fullName>
    <description>Sum amount of all child opportunity products sold.</description>
    <inlineHelpText>Sum amount of all child opportunity products sold.</inlineHelpText>
    <label>Child Opps Prod Only Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>