force-app/main/default/objects/Opportunity_Hierarchy__c/fields/Child_Opps_Svcs_Only_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Child_Opps_Svcs_Only_Sub_Total__c</fullName>
    <description>Sum of all child opportunity services sold.</description>
    <inlineHelpText>Sum of all child opportunity services sold.</inlineHelpText>
    <label>Child Opps Svcs Only Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>