force-app/main/default/objects/Opportunity_Hierarchy__c/fields/Opp_Hierarchy_Svcs_Only_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Opp_Hierarchy_Svcs_Only_Sub_Total__c</fullName>
    <formula>Child_Opps_Svcs_Only_Sub_Total__c+Parent_Opp_Svcs_Only_Sub_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Hierarchy Svcs Only Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>