force-app/main/default/objects/Opportunity_Hierarchy__c/fields/Parent_Opp_Svcs_Only_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opp_Svcs_Only_Sub_Total__c</fullName>
    <formula>IF(
Parent_Opportunity__r.IsWon = TRUE, 
Parent_Opportunity__r.Svcs_Amt_for_NetSuite2__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opp Svcs Only Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>