force-app/main/default/objects/Opportunity_Hierarchy__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Opportunity Hierarchy</relationshipLabel>
    <relationshipName>Opportunity_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>