force-app/main/default/objects/Opportunity_Hierarchy__c/fields/SOW_Budget__c.field-meta.xml
<CustomField>
    <fullName>SOW_Budget__c</fullName>
    <formula>Parent_Opportunity__r.Svcs_Amt_for_NetSuite2__c+CO_SOW_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOW Budget ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>